--- a/index.html
+++ b/index.html
@@ -5,28 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khách Sạn</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="./backend/script.js" defer></script>
 </head>
 <body>
-    
-    <!-- Thanh công cụ -->
     <nav>
-        <div class="navbar">
-            <button id="payNowBtn">Thanh Toán</button>
-            <a href="http://localhost/pttkhdt/ks.php"><button class="viewBtn">Xem DS Khách Sạn</button></a>
-            <input type="text" id="search" placeholder="Tìm phòng...">
-            <a href="http://localhost/pttkhdt/nh.php"><button class="viewBtn">Xem DS Nhà Hàng</button></a>
-            <button id="loginBtn">Đăng Nhập</button>
-            <a href="./qlnh/index.html"><button class="viewBtn">Trang Nhà Hàng</button></a>
+        <div class="navbar">    
+            <a href="http://localhost/pttkhdt/login.php"><button id="loginBtn">Đăng Nhập</button></a>
         </div>
     </nav>
-    <!-- 
-    <div class="view-buttons">
-        <a href="http://localhost/pttkhdt/ks.php"><button class="viewBtn">Xem Khách Sạn</button></a>
-        <a href="http://localhost/pttkhdt/nh.php"><button class="viewBtn">Xem Nhà Hàng</button></a>
-    </div>
-    -->
-    <!-- Form đăng nhập (ẩn ban đầu) -->
     <div id="loginForm" class="login-form">
         <h3>Đăng Nhập</h3>
         <input type="text" id="username" placeholder="Tên đăng nhập" required>
@@ -69,6 +55,7 @@
                 <p>Giá: 2,999,000 VND</p>
                 <button class="bookBtn">Đặt phòng</button>
             </div>
+            
         </div>
     </section>
 
